feat(v2.0): 规则库打包进取证程序+策略版本展示+ForensicMain分离+AI引导+hprof分析+代理支持
- 取证程序内置规则库(离线可用), RuleEngine 规则匹配命中报告
- 主程序展示策略版本/补充策略/作者署名 x7peeps
- 取证程序 Main-Class=ForensicMain(现场端), 排除分析端类
- --analyze 支持 hprof 内存镜像分析+AI增强, 未配置AI结尾引导
- RuleUpdater 支持 HTTP_PROXY/HTTPS_PROXY 代理
- memshell-rules 特征库仓库上线(6条规则+模板+CONTRIBUTING)